--- a/index.html
+++ b/index.html
@@ -7,13 +7,34 @@
         <title>oclima BRASIL</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="css\estilos.css">
     </head>
     <body>
+        <div class= "container">
         <img src="css\oclima Brasil.png" width=300px alt="Logo da oclima BRASIL">
         <h1>oclima BRASIL</h1>
+        <div class="card-body">
+        <div class="city">Cidade Exemplo, BR</div>
+        <div class="date">Domingo, 20 Março 2020</div>
+        
+        <div class="container-temp">
+            <div>22</div>
+            <spam>c</spam> 
+        </div>
+        <div class="weather">nublado</div>
+        <div class="hi-low">22c / 23c</div>
+        </div>
+
+        <h2>Contato</h2>
+    </div>
+        <div id="rodape">
+            <img src="css\oclima Brasil.png" width=100px alt="Logo da oclima BRASIL">
         <ul>
-            <li>Nós do <strong>oclima BRASIL</strong> trabalhamos para nos tornarmos o mais acessado site de informações climáticas do Brasil!</li>
+            <p>O <strong>oclima BRASIL</strong> trabalha para tornar-se o mais acessado site de informações climáticas do Brasil!</p>
         </ul>
+        &copy; Copyright oclima BRASIL
+    </div>
+    </div>
     </body>
 </html>
