--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
         <div class= "container">
         <img src="css\oclima Brasil.png" width=300px alt="Logo da oclima BRASIL">
         <h1>oclima BRASIL</h1>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Digite sua cidade" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">
+                Buscar
+            </button>
+          </div>
         <div class="card-body">
         <div class="city">Cidade Exemplo, BR</div>
         <div class="date">Domingo, 20 Março 2020</div>
-        
+                  
         <div class="container-temp">
             <div>22</div>
             <spam>c</spam> 
@@ -26,7 +32,8 @@
         <div class="hi-low">22c / 23c</div>
         </div>
 
-        <h2>Contato</h2>
+        <h2>Sobre</h2>
+        <p>Aqui no <strong>oclima Brasil</strong> temos informações completas para a previsão do tempo em todos os estados e cidades do Brasil. Acesse através do nosso site e confira a temperatura, clima, chuvas e nebulosidade, pressão.</p>
     </div>
         <div id="rodape">
             <img src="css\oclima Brasil.png" width=100px alt="Logo da oclima BRASIL">
